--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,163 @@
   {% endblock  %}
 
   {% block content %}
-    <div class="ui container">
-      <h1>Hola mundo</h1>
+
+    <!-- Sidebar Menu -->
+    <div class="ui vertical inverted sidebar menu">
+    <a class="active item">Home</a>
+    <a class="item">Work</a>
+    <a class="item">Company</a>
+    <a class="item">Careers</a>
+    <a class="item">Login</a>
+    <a class="item">Signup</a>
     </div>
+
+
+    <!-- Page Contents -->
+    <div class="pusher">
+
+
+    <div class="ui inverted vertical masthead center aligned segment">
+
+      <div class="ui container">
+        <div class="ui large secondary inverted pointing menu">
+          <a class="toc item">
+            <i class="sidebar icon"></i>
+          </a>
+          <a class="active item">Inicio</a>
+          <a class="item">Mi Escuela</a>
+          <a class="item">Escuelas</a>
+          <div class="right item">
+            <a class="ui inverted button">Iniciar Sesión</a>
+            <a class="ui inverted button">Registrarse</a>
+          </div>
+        </div>
+      </div>
+
+
+
+      <div class="ui text container">
+        <h1 class="ui inverted header">
+          Bienvenido a Mi Escuela
+        </h1>
+        <h2>Una comunidad para mejorar las escuelas.</h2>
+        <div class="ui huge primary button">Comenzar<i class="right arrow icon"></i></div>
+      </div>
+
+    </div>
+
+    <div class="ui vertical stripe segment">
+      <div class="ui middle aligned stackable grid container">
+        <div class="row">
+          <div class="eight wide column">
+            <h3 class="ui header">Ayuda a tu Escuela</h3>
+            <p>We can give your company superpowers to do things that they never thought possible. Let us delight your customers and empower your needs...through pure data analytics.</p>
+          </div>
+          <div class="six wide right floated column">
+            <img src="http://blog.teamtreehouse.com/wp-content/uploads/2013/10/idea-execution.png" class="ui large bordered rounded image">
+          </div>
+        </div>
+        <div class="row">
+          <div class="center aligned column">
+            <a class="ui huge button">Ir a Escuelas</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="ui vertical stripe segment">
+      <div class="ui middle aligned stackable grid container">
+        <div class="row">
+          <div class="six wide left floated column">
+            <img src="https://d13yacurqjgara.cloudfront.net/users/146798/screenshots/2047174/school.png" class="ui large bordered rounded image">
+          </div>
+          <div class="eight wide column">
+            <h3 class="ui header">Mi Escuela</h3>
+            <p>We can give your company superpowers to do things that they never thought possible. Let us delight your customers and empower your needs...through pure data analytics.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="center aligned column">
+            <a class="ui huge button">Ir a Mi Escuela</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="ui vertical stripe segment">
+      <div class="ui middle aligned stackable grid container">
+        <div class="row">
+          <div class="eight wide column">
+            <h3 class="ui header">Rankings</h3>
+            <p>We can give your company superpowers to do things that they never thought possible. Let us delight your customers and empower your needs...through pure data analytics.</p>
+          </div>
+          <div class="six wide right floated column">
+            <img src="https://cdn0.iconfinder.com/data/icons/e-commerce-and-shopping-2/512/award_ribbon_medal_badge_label_winner_win_emblem_achievement_quality_first_best_champion_advantage_success_competition_victory_flat_design_icon-512.png" class="ui large bordered rounded image">
+          </div>
+        </div>
+        <div class="row">
+          <div class="center aligned column">
+            <a class="ui huge button"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+    <div class="ui inverted vertical footer segment">
+      <div class="ui container">
+        <div class="ui stackable inverted divided equal height stackable grid">
+          <div class="three wide column">
+            <h4 class="ui inverted header">About</h4>
+            <div class="ui inverted link list">
+              <a href="#" class="item">Sitemap</a>
+              <a href="#" class="item">Contact Us</a>
+              <a href="#" class="item">Religious Ceremonies</a>
+              <a href="#" class="item">Gazebo Plans</a>
+            </div>
+          </div>
+          <div class="three wide column">
+            <h4 class="ui inverted header">Services</h4>
+            <div class="ui inverted link list">
+              <a href="#" class="item">Banana Pre-Order</a>
+              <a href="#" class="item">DNA FAQ</a>
+              <a href="#" class="item">How To Access</a>
+              <a href="#" class="item">Favorite X-Men</a>
+            </div>
+          </div>
+          <div class="seven wide column">
+            <h4 class="ui inverted header">Footer Header</h4>
+            <p>Extra space for a call to action inside the footer that could help re-engage users.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  {% endblock  %}
+
+  {% block script %}
+  <script type="text/javascript">
+    $(document).ready(function() {
+      // fix menu when passed
+      $('.masthead')
+        .visibility({
+          once: false,
+          onBottomPassed: function() {
+            $('.fixed.menu').transition('fade in');
+          },
+          onBottomPassedReverse: function() {
+            $('.fixed.menu').transition('fade out');
+          }
+        })
+      ;
+      // create sidebar and attach to menu open
+      $('.ui.sidebar')
+        .sidebar('attach events', '.toc.item')
+      ;
+    });
+  </script>
   {% endblock  %}
